    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
29-Jun-2004
   Problems fixed:
       1. bug #805921: WebForm.selectImageButtonPosition was misleadingly public and should not have been used.
          It has been made package-private, and new means are provided to submit positional image buttons (see additions).
       2. bug #982097: HTTP Urls not preserved in submit requests

   Additions:
       1. rfe #766768: getText() methods now translate <br> tags as newlines.
       2. HttpUnit now catches an attempt to load an included script from a page included with "getResource" rather than
          "getResponse."
       3. Click positions on image buttons may now be specified using one of:
          form.submit( button, x, y )
          button.click( x, y )

28-Jun-2004
   Additions:
       1. rfe #901172: "text/xhtml" is now recognized as a valid HTML "content-type"

   Problems fixed:
       1. bug #959918: Javascript setting of numeric values included trailing zeros after the decimal point.
       2. bug #957882: URL path elements containing leading '.' were being stripped of those periods.
       3. bug #830856: WebLink URLs broken across lines are now handled correctly

27-Jun-2004
   Thanks to Fabrizio Giustina for adding an entity-resolver to support local use of ServletUnit with a regular web.xml

   Additions:
       1. patch #915296: Local copies of the 2.2 and 2.3 web.xml dtds are now consulted if specified, 
          rather than connecting to the Sun website.
       2. HTMLElement now supports a getText() method to return the text contents of any element
       3. WebResponse now supports getTextBlocks and getFirstMatchingTextBlock to retrieve headers and paragraphs from a page.

25-Jun-2004
   Problems fixed:
       1. bug #960307 meta tags within <noscript> tags were not being ignored when scripting was disabled

24-Jun-2004
   Problems fixed: