@@ -353,6 +353,23 @@ public class WebPageTest extends HttpUnitTest {
      }
 
 
+    public void testMetaRefreshAbsoluteURLRequestWithAmpersandEncoding() throws Exception {
+        String refreshURL = "http://localhost:8080/someapp/secure/?username=abc&somevalue=abc";
+        String page = "<html><head><title>Sample</title>" +
+                      "<meta Http-equiv=refresh content='2;URL=\"http://localhost:8080/someapp/secure/?username=abc&amp;somevalue=abc\"></head>\n" +
+                      "<body>This has no data\n" +
+                      "</body></html>\n";
+        defineResource( "SimplePage.html", page );
+
+        WebConversation wc = new WebConversation();
+        WebRequest request = new GetMethodWebRequest( getHostPath() + "/SimplePage.html" );
+        WebResponse simplePage = wc.getResponse( request );
+
+        assertEquals( "Refresh URL", refreshURL, simplePage.getRefreshRequest().getURL().toExternalForm() );
+        assertEquals( "Refresh delay", 2, simplePage.getRefreshDelay() );
+     }
+
+
     public void testMetaRefreshURLRequestNoDelay() throws Exception {
         String refreshURL = getHostPath() + "/NextPage.html";
         String page = "<html><head><title>Sample</title>" +
